--- a/main/templates/book.html
+++ b/main/templates/book.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <form action="" method="post" class="col-md-6">
+            <form action="/books/create" method="post" class="col-md-6">
                 <h1>Add a Book</h1>
                 {% csrf_token %}
                 <div class="form-group">
@@ -23,6 +23,21 @@
                 </div>
                 <button class="btn btn-secondary">Create Book</button>
             </form>
+
+            <table class="col-md-6">
+                <tr>
+                    <th>ID</th>
+                    <th>Title</th>
+                    <th>Action</th>
+                </tr>
+                {% for book in books %}
+                <tr>
+                    <td>{{book.id}}</td>
+                    <td>{{book.title}}</td>
+                    <td><a href="/books/{{book.id}}">View</a></td>
+                </tr>
+                {% endfor %}
+            </table>
         </div>
         </div>
 </body>
