--- a/main/templates/show_book.html
+++ b/main/templates/show_book.html
@@ -7,6 +7,25 @@
     <title>Many to Many</title>
 </head>
 <body>
+    <h1>{{one_book.title}}</h1>
+    <p>{{one_book.id}}</p>
+    <p>{{one_book.description}}</p>
+    {% for author in one_book.authors.all %}
+    <p>{{author.first_name}} {{author.last_name}}</p>
+    {% endfor %}
+    <h3>Add an author!</h3>
+    <form action="/books/add_author" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="book" value={{one_book.id}}>
+        <select name="author" id="author">
+            {% for author in authors%}
+            {% if author not in one_book.authors.all%}
+            <option value="{{author.id}}">{{author.first_name}} {{author.last_name}}</option>
+            {% endif %}
+            {% endfor %}
+        </select>
     
+        <button>Add</button>
+    </form>
 </body>
 </html>
