--- a/main/templates/author.html
+++ b/main/templates/author.html
@@ -25,6 +25,7 @@
     </div>
     <button class="btn btn-primary">Create Author</button>
 </form>
+<div class="row">
 <table>
     <tr>
         <th>ID</th>
@@ -39,5 +40,12 @@
     </tr>
     {% endfor %}
 </table>
+{% if messages %}   
+    {% for message in messages %}    
+        <p>{{ message }}</p>
+    {% endfor %}
+</ul>
+{% endif %}
+</div>
 </body>
 </html>
