--- a/main/templates/show_book.html
+++ b/main/templates/show_book.html
@@ -10,6 +10,7 @@
     <h1>{{one_book.title}}</h1>
     <p>{{one_book.id}}</p>
     <p>{{one_book.description}}</p>
+    <h3>Authors Associated</h3>
     {% for author in one_book.authors.all %}
     <p>{{author.first_name}} {{author.last_name}}</p>
     {% endfor %}
